# akvelon_python_internship_3_Murat_Kamaletdinov

./: .gitignore  README.md  docker-compose.yml
src/: .coveragerc  pyproject.toml  pytest.ini
src/src/: settings.py  test_settings.py  urls.py
src/task/: admin.py  forms.py  managers.py  models.py  urls.py  utils.py  views.py
src/task/management/commands/: fibo.py
src/task/migrations/: 0001_initial.py
src/task/serializers/: transaction_serializers.py  user_serializer.py
src/task/services/: user.py
src/task/tests/: confest.py  helpers.py
src/task/tests/api/: transaction_tests.py  user_tests.py
src/task/tests/factories/: transaction_factory.py  user_factory.py
