[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Murat Kamaletdinov <kamaletdinov2425@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
